--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.7.0"
   },
   "dependencies": {
     "angular": "^1.6.3",
@@ -23,8 +23,14 @@
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "sequelize": "^5.8.5"
+    "nodemon": "^1.19.0",
+    "pg": "^7.10.0",
+    "pg-hstore": "^2.3.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "reactjs-popup": "^1.3.2",
+    "sequelize": "^5.8.5",
+    "sequelize-cli": "^5.4.0",
+    "styled-components": "^3.0.2"
   }
 }
