--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "reactjs-popup": "^1.3.2",
-    "sequelize": "^5.8.5",
-    "sequelize-cli": "^5.4.0",
+    "redux": "^4.0.4",
+    "sequelize": "^5.12.3",
+    "sequelize-cli": "^5.5.0",
     "styled-components": "^3.0.2"
   }
 }
